`srt` output base (not tested yet)
